--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
     <h2>uwun't</h2>
     <h6>Hehehe</h6>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor quibusdam eum minus qui dolorum, saepe ipsam inventore facilis error ratione aspernatur, ut praesentium. Expedita nesciunt itaque deserunt eius corrupti hic.</p>
-    
+    <h6>Hehehe2</h6>
 </body>
 </html>
