--- a/index.html
+++ b/index.html
@@ -8,10 +8,8 @@
 </head>
 <body>
     <h1>uwun't</h1>
-    <h2>uwun't</h2>
-    <h6>Hehehe</h6>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor quibusdam eum minus qui dolorum, saepe ipsam inventore facilis error ratione aspernatur, ut praesentium. Expedita nesciunt itaque deserunt eius corrupti hic.</p>
-    <p>Ansefe deja de joder tanto c:</p>
-    <h6>Hehehe2</h6>
+    <!-- Anfese -->
+
+    <!-- Loro -->
 </body>
 </html>
