Actualización de todo

--- a/index.html
+++ b/index.html
@@ -4,12 +4,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="elo, boost, league of legends, money">
+    <meta name="author" content="Pibe Valderrama"> 
+    <meta name="description" content="Esta es una página para boost">
+    <link rel="stylesheet" href="CSS/styles.css">
+    <script type="text/javascrpt" src="js\prefixfree.min.js"></script>
     <title>Eloboost</title>
 </head>
 <body>
     <h1>uwun't</h1>
+    
     <!-- Anfese -->
+    <h2>What we offer</h2>
+    <h3>Featured Services</h3>
 
     <!-- Loro -->
+    <footer></footer>
 </body>
 </html>
