Actualización con carpeta img

--- a/index.html
+++ b/index.html
@@ -15,8 +15,22 @@
     <h1>uwun't</h1>
     
     <!-- Anfese -->
-    <h2>What we offer</h2>
-    <h3>Featured Services</h3>
+    <section>
+        <h2>What we offer</h2>
+        <h3>Featured Services</h3>
+        <div class="Cuadro">
+            <div class="Cuadrito1">
+                <img src="img/logo.jpg" alt="Cuadrito1" title="Cuadrito1">
+            </div>
+            <div class="Cuadrito2"></div>
+            <div class="Cuadrito3"></div>
+            <div class="Cuadrito4"></div>
+            <div class="Cuadrito5"></div>
+        </div>
+    </section>
+
+
+
 
     <!-- Loro -->
     <footer></footer>
