--- a/index.html
+++ b/index.html
@@ -20,33 +20,33 @@
         <div class="Button1">  
             <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRCfwPfaw4BkzLq2noBLVrMlnqH9k8r6VW28ONg8jsIqvyYWOvbxNI-MSD_PKiDoR0G13M&usqp=CAU" height="30px">
             <a class="BoostRoyal">BoostRoyal</a>        
-            <a href="">Go Premium</a>
-            <a href="">Loyalty</a>
+            <a href="#">Go Premium</a>
+            <a href="#">Loyalty</a>
             <form>
                 <p>EN</p>
                 <select>
-                    <option value="">English</option>
-                    <option value="">Spanish</option>
-                    <option value="">France</option>
-                    <option value="">German</option>
-                    <option value="">Italy</option>
-                    <option value="">Norway</option>
+                    <option value="#">English</option>
+                    <option value="#">Spanish</option>
+                    <option value="#">France</option>
+                    <option value="#">German</option>
+                    <option value="#">Italy</option>
+                    <option value="#">Norway</option>
                 </select>
             </form>
         </div>
 
         <div class="Button2">
-            <a href="">Prices</a>
-            <a href="">Boosters</a>
-            <a href="">24/7 Help</a>
-            <a class="ClientArea" href="">Client Area</a>
+            <a href="#">Prices</a>
+            <a href="#">Boosters</a>
+            <a href="#">24/7 Help</a>
+            <a class="ClientArea" href="#">Client Area</a>
         </div>
 
         <div class="PanelLeft">
             <h2>The Leading LoL Boost Platform</h2>
             <p>Reach your dream rank effortlessly with our safe ELO Boosting, Coaching & Account Buying Services.</p>
-            <a class="Button3" href="">BOOST ME</a>
-            <a class="Button3" href="">Buy LoL account</a>
+            <a class="Button3" href="#">BOOST ME</a>
+            <a class="Button3" href="#">Buy LoL account</a>
             <a href="https://www.trustpilot.com/review/boostroyal.com">Trustpilot</a>
         </div>
         
